# data-lineage-explorer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dle/: __init__.py  cli.py  graph.py  lineage.py  reporting.py  scanner.py  sql_parser.py
examples/: 01_raw_to_staging.sql  02_staging_to_curated.sql  03_curated_to_mart.sql
tests/: test_end_to_end_cli.py  test_sql_parser_unit.py
