[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-lineage-explorer"
version = "0.1.0"
description = "Simplified data lineage extraction from SQL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "sqlglot>=23.0.0",
  "networkx>=3.2.1",
]

[project.scripts]
dle = "dle.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0",
]
html = [
  "pyvis>=0.3.2",
]
extra = [
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
]
all = [
  "pyvis>=0.3.2",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dle*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
